# Jarvis.IA

./: .env  .env.example  .gitignore  AUDITORIA_LLMS_FROM_SCRATCH.md  GUIA_ERROS_COMUNS.md  INTEGRACAO_LLM_AGENT.md  Jarvis.bat  PLANO_TREINAMENTO_JARVIS.md  README.md  agent.py  enroll_voice.py  jarvis.py  monitoring_tools.py  productivity_tools.py  prompts.py  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  test_web_tools.py  web_tools.py  windows_tools.py  wsl_tools.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Guia git hub/: GUIA_GITHUB.md
KMS/screenshots/: .gitkeep
config/: plugins.yaml
config/voice_profiles/: Thiago_embedding.npy  profiles.json
docs/: GUIA_DEVOPS.md  PROPOSTA_APRIMORAMENTO_JARVIS.md  RELATORIO_CODEAGENT_CLI.md  RELATORIO_SUBAGENT_PROGRAMACAO.md
jarvis/: __init__.py  assistant.py  memory.py  personality.py
personal_website/: index.html  script.js  style.css
src/: __init__.py
src/jarvis/: __init__.py  agent.py  prompts.py  testememoria.py  voice_tools.py  voice_verification.py
src/jarvis/agents/: __init__.py  code_agent.py
src/jarvis/automations/: __init__.py  crunchyroll.py  utils.py
src/jarvis/cli/: __init__.py  agents.py  config.py  context.py  history.py  main.py  output.py
src/jarvis/plugins/: __init__.py  apps.py  base.py  code_assistant.py  datetime_plugin.py  manager.py  (+4 more)
tests/: __init__.py  conftest.py  qa_jarvis_v2.py  test_code_agent_adk.py  test_code_agent_tools.py  test_complex_task.py  test_external_access.py
(+16 files in other folders)
