[project]
name = "jarvis"
version = "0.2.0"
description = "JARVIS - Assistente de Voz com IA"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "JARVIS Team"}
]
keywords = ["ai", "assistant", "voice", "livekit", "gemini", "code-agent"]

dependencies = [
    # LiveKit
    "livekit-agents>=0.8.0",
    "livekit-plugins-openai>=0.8.0",
    "livekit-plugins-google>=0.8.0",
    "livekit-plugins-deepgram>=0.8.0",
    "livekit-plugins-silero>=0.8.0",
    "livekit-plugins-noise-cancellation>=0.2.0",
    # Memória
    "mem0ai>=0.1.0",
    # Google ADK
    "google-adk>=1.26.0",
    "mcp>=1.0.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.40",
    "pygments>=2.17.0",
    # Utilitários
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
]

[project.scripts]
jarvis-code = "jarvis.cli.main:main_entrypoint"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
